bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:3: error: not found: value ||
  if ((temp1 <= 0 && temp2 >= 100)) ||  || (temp1 >= 100 && temp1 <= 0) {
                                    ^IcyHot:3: error: Boolean does not take parameters
  if ((temp1 <= 0 && temp2 >= 100)) ||  || (temp1 >= 100 && temp1 <= 0) {
                                                                        ^